--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Recipe Book</a>
+    <a class="navbar-brand fs-1" href="#">Recipe Book</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -20,8 +20,6 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Shopping List</a>
         </li>
-      </ul>
-      <ul class="navbar-nav navbar-right">
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
@@ -30,16 +28,18 @@
             data-bs-toggle="dropdown"
             aria-expanded="false"
           >
-            Dropdown
+            Manage
           </a>
-          <ul class="dropdown-menu">
+          <div class="dropdown-menu dropdown-menu-right">
             <li><a class="dropdown-item" href="#">Action </a></li>
             <li><a class="dropdown-item" href="#">Another action</a></li>
             <li><hr class="dropdown-divider" /></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
+          </div>
         </li>
       </ul>
+
+      <!-- <ul class="navbar-nav navbar-right"></ul> -->
     </div>
   </div>
 </nav>
