--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,1 +1,25 @@
-<p>shopping-edit works!</p>
+<form>
+  <div class="row">
+    <div class="col-md-5 col-12">
+      <label for="ingredientName" class="form-label">Ingredient Name</label>
+      <input type="text" class="form-control" id="ingredientName" />
+    </div>
+    <div class="col-md-2 col-4">
+      <div class="mb-3">
+        <label for="quantityInput" class="form-label">Quantity</label>
+        <input type="number" class="form-control" id="quantityInput" />
+      </div>
+    </div>
+  </div>
+  <div class="btn-group" role="group" aria-label="Basic mixed styles example">
+    <button type="button" class="btn btn-success">
+      <span><i class="bi bi-plus-square-fill"></i></span> Add
+    </button>
+    <button type="button" class="btn btn-danger">
+      <span><i class="bi bi-trash-fill"></i></span> Delete
+    </button>
+    <button type="button" class="btn btn-warning">
+      <span><i class="bi bi-arrow-clockwise"></i></span> Clear
+    </button>
+  </div>
+</form>
