--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
-<app-header></app-header>
-<div class="row">
+<app-header
+  (showRecipesEvent)="showRecipes = $event"
+  (showShoppingListEvent)="showShoppingList = $event"
+></app-header>
+<div class="row px-5">
   <div class="col-md-12">
-    <app-recipes></app-recipes>
-    <app-shopping-list></app-shopping-list>
+    <app-recipes *ngIf="showRecipes"></app-recipes>
+    <app-shopping-list *ngIf="showShoppingList"></app-shopping-list>
   </div>
 </div>
