--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,1 +1,33 @@
+<div class="row my-4">
+  <div class="col-xs-12">
+    <button class="btn btn-success">
+      <span class="fs-5"><i class="bi bi-plus-circle-fill"></i></span>
+      <span class="mx-2">New Recipe</span>
+    </button>
+  </div>
+</div>
+<hr />
+<div class="row">
+  <div class="col-xs-12">
+    <div class="list-group">
+      <a
+        href="#"
+        class="list-group-item list-group-item-action d-flex gap-4 py-2 justify-content-between"
+        *ngFor="let recipe of recipes"
+      >
+        <div>
+          <h4>{{ recipe.name }}</h4>
+          <p class="list-group-item-text">{{ recipe.description }}</p>
+        </div>
+        <img
+          [src]="recipe.imagePath"
+          alt=""
+          class="img-responsive"
+          style="max-height: 80px"
+        />
+      </a>
+    </div>
+  </div>
+</div>
+
 <app-recipe-item></app-recipe-item>
