--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,7 +1,14 @@
-<div class="row">
-  <div class="col-xs-10">
+<div class="row py-4">
+  <div class="col-md-12">
     <app-shopping-edit></app-shopping-edit>
     <hr />
-    <p>The List</p>
+    <ul class="list-group">
+      <a
+        href="#"
+        class="list-group-item list-group-item-action"
+        *ngFor="let ingredient of ingredients"
+        >{{ ingredient.name }} ({{ ingredient.amount }})</a
+      >
+    </ul>
   </div>
 </div>
