--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,1 +1,18 @@
-<p>recipe-item works!</p>
+<div class="list-group">
+  <a
+    href="#"
+    class="list-group-item list-group-item-action d-flex gap-4 py-2 justify-content-between"
+    (click)="onRecipeClick()"
+  >
+    <div>
+      <h4>{{ recipe.name }}</h4>
+      <p class="list-group-item-text">{{ recipe.description }}</p>
+    </div>
+    <img
+      [src]="recipe.imagePath"
+      alt=""
+      class="img-responsive"
+      style="max-height: 80px"
+    />
+  </a>
+</div>
