--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -9,25 +9,10 @@
 <hr />
 <div class="row">
   <div class="col-xs-12">
-    <div class="list-group">
-      <a
-        href="#"
-        class="list-group-item list-group-item-action d-flex gap-4 py-2 justify-content-between"
-        *ngFor="let recipe of recipes"
-      >
-        <div>
-          <h4>{{ recipe.name }}</h4>
-          <p class="list-group-item-text">{{ recipe.description }}</p>
-        </div>
-        <img
-          [src]="recipe.imagePath"
-          alt=""
-          class="img-responsive"
-          style="max-height: 80px"
-        />
-      </a>
-    </div>
+    <app-recipe-item
+      *ngFor="let recipeElement of recipes"
+      [recipe]="recipeElement"
+      (selectedRecipe)="selectedRecipe = $event"
+    ></app-recipe-item>
   </div>
 </div>
-
-<app-recipe-item></app-recipe-item>
