--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,15 +16,19 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a
-            class="nav-link active"
-            aria-current="page"
+            class="nav-link"
             href="#"
             (click)="onShowRecipesClick()"
+            [ngClass]="{ active: recipeNavActive }"
             >Recipes</a
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" (click)="onShowShoppingListClick()"
+          <a
+            class="nav-link"
+            href="#"
+            (click)="onShowShoppingListClick()"
+            [ngClass]="{ active: shoppingListNavActive }"
             >Shopping List</a
           >
         </li>
