--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,14 +1,15 @@
-<div class="row">
-  <div class="col-xs-12">
-    <img src="" alt="" class="img-responsive" />
+<div class="row p-4">
+  <div class="col-xs-12 text-center">
+    <img
+      [src]="recipeDetails.imagePath"
+      [alt]="recipeDetails.name"
+      class="img-fluid"
+      style="width: 600px; height: 500px; object-fit: cover"
+    />
   </div>
-</div>
-<div class="row">
-  <div class="col-xs-12">
-    <h1>Recipe Name</h1>
+  <div class="col-xs-12 text-center">
+    <h1>{{ recipeDetails.name }}</h1>
   </div>
-</div>
-<div class="row">
   <div class="col-xs-12">
     <div class="dropdown">
       <button
@@ -26,10 +27,6 @@
       </ul>
     </div>
   </div>
-</div>
-<div class="row">
-  <div class="col-xs-12">Description</div>
-</div>
-<div class="row">
+  <div class="col-xs-12">{{ recipeDetails.description }}</div>
   <div class="col-xs-12">Ingredients</div>
 </div>
