--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,18 +1,13 @@
-<div class="list-group">
-  <a
-    href="#"
-    class="list-group-item list-group-item-action d-flex gap-4 py-2 justify-content-between"
-    (click)="onRecipeClick()"
-  >
-    <div>
-      <h4>{{ recipe.name }}</h4>
-      <p class="list-group-item-text">{{ recipe.description }}</p>
-    </div>
-    <img
-      [src]="recipe.imagePath"
-      alt=""
-      class="img-responsive"
-      style="max-height: 80px"
-    />
-  </a>
-</div>
+<a
+  href="#"
+  class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
+  (click)="onRecipeClick()"
+>
+  <div>
+    <h4>{{ recipe.name }}</h4>
+    <p class="list-group-item-text">{{ recipe.description }}</p>
+  </div>
+  <div style="max-width: 60px; max-height: 80">
+    <img [src]="recipe.imagePath" alt="" class="img-thumbnail" />
+  </div>
+</a>
