--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,8 +1,16 @@
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list></app-recipe-list>
+    <app-recipe-list
+      (selectedRecipe)="selectedRecipe = $event"
+    ></app-recipe-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-detail></app-recipe-detail>
+    <app-recipe-detail
+      [recipeDetails]="selectedRecipe"
+      *ngIf="selectedRecipe; else infoText"
+    ></app-recipe-detail>
+    <ng-template #infoText>
+      <p class="p-5">Please select a Recipe</p>
+    </ng-template>
   </div>
 </div>
