--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,6 +1,8 @@
 <div class="row py-4">
   <div class="col-md-12">
-    <app-shopping-edit></app-shopping-edit>
+    <app-shopping-edit
+      (newIngredientEvent)="addIngredient($event)"
+    ></app-shopping-edit>
     <hr />
     <ul class="list-group">
       <a
