Completed error handling for shopping edit component

--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,4 +1,9 @@
 <div class="row py-4">
+  <app-alerts
+    *ngIf="isVisible"
+    [alert]="alert"
+    (closeAlertEvent)="closeAlert()"
+  ></app-alerts>
   <div class="col-md-12">
     <app-shopping-edit
       (newIngredientEvent)="addIngredient($event)"
