--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -22,7 +22,7 @@
     </div>
   </div>
   <div class="btn-group" role="group" aria-label="Add, Delete, Reset buttons">
-    <button type="button" class="btn btn-success" (click)="onClickAdd()">
+    <button type="button" class="btn btn-success" (click)="addIngredient()">
       <span><i class="bi bi-plus-square-fill"></i></span> Add
     </button>
     <button type="button" class="btn btn-danger">
