--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,12 @@
   (showRecipesEvent)="showRecipes = $event"
   (showShoppingListEvent)="showShoppingList = $event"
 ></app-header>
-<div class="row px-5">
-  <div class="col-md-12">
-    <app-recipes *ngIf="showRecipes"></app-recipes>
-    <app-shopping-list *ngIf="showShoppingList"></app-shopping-list>
+
+<div class="container-fluid">
+  <div class="row px-5">
+    <div class="col-md-12">
+      <app-recipes *ngIf="showRecipes"></app-recipes>
+      <app-shopping-list *ngIf="showShoppingList"></app-shopping-list>
+    </div>
   </div>
 </div>
