--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -40,11 +40,11 @@
   <div class="col-xs-12 mt-3">
     <div class="form-check ms-1 mb-1">
       <input
+        #selectAllCheckBox
         class="form-check-input"
         type="checkbox"
-        value=""
         id="selectAllIng"
-        (click)="onSelectAll()"
+        (click)="onSelectAll($event)"
       />
       <label class="form-check-label" for="selectAllIng"> Select All </label>
       <ul class="list-group">
@@ -56,8 +56,12 @@
           ><input
             class="form-check-input"
             type="checkbox"
-            value=""
-            aria-label="Checkbox for following text input"
+            [attr.aria-label]="
+              'Select ingredient ' +
+              ingredient.name +
+              ' for recipe ' +
+              recipeDetails.name
+            "
             [checked]="isAllSelected"
           /><span class="ms-2"
             >{{ ingredient.name }} ({{ ingredient.amount }})</span
