--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -43,16 +43,21 @@
         #selectAllCheckBox
         class="form-check-input"
         type="checkbox"
-        id="selectAllIng"
+        [id]="recipeDetails.name.trim().replaceAll(' ', '-').toLowerCase()"
         (click)="onSelectAll($event)"
       />
-      <label class="form-check-label" for="selectAllIng"> Select All </label>
+      <label
+        class="form-check-label"
+        [htmlFor]="recipeDetails.name.trim().replaceAll(' ', '-').toLowerCase()"
+      >
+        Select All
+      </label>
       <ul class="list-group">
         <a
           appListItem
           class="list-group-item list-group-item-action"
           *ngFor="let ingredient of recipeDetails.ingredients"
-          (click)="selectIngredient(ingredient, isAllSelected)"
+          (click)="selectIngredient(ingredient)"
           ><input
             class="form-check-input"
             type="checkbox"
