--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,9 @@
-<app-header
-  (showRecipesEvent)="showRecipes = $event"
-  (showShoppingListEvent)="showShoppingList = $event"
-></app-header>
+<app-header></app-header>
 
 <div class="container-fluid">
   <div class="row px-5">
     <div class="col-md-12">
-      <app-recipes *ngIf="showRecipes"></app-recipes>
-      <app-shopping-list *ngIf="showShoppingList"></app-shopping-list>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
