--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,4 +1,4 @@
-<div class="row p-4">
+<div class="row p-4" *ngIf="recipeDetails">
   <div class="col-xs-12 text-center">
     <img
       [src]="recipeDetails.imagePath"
@@ -30,14 +30,13 @@
         <li>
           <a
             (click)="addIngToShoppingList()"
-            href="#"
             class="dropdown-item"
             [ngClass]="{ disabled: isAddToShoppingListDisabled }"
             >+ Shopping List</a
           >
         </li>
-        <li><a href="#" class="dropdown-item">Edit Recipe</a></li>
-        <li><a href="#" class="dropdown-item">Delete Recipe</a></li>
+        <li><a class="dropdown-item" routerLink="edit">Edit Recipe</a></li>
+        <li><a class="dropdown-item">Delete Recipe</a></li>
       </ul>
     </div>
   </div>
