--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,6 +1,6 @@
 <div class="row my-4">
   <div class="col-xs-12">
-    <button class="btn btn-success">
+    <button class="btn btn-success" routerLink="new">
       <span class="fs-5"><i class="bi bi-plus-circle-fill"></i></span>
       <span class="mx-2">New Recipe</span>
     </button>
@@ -11,8 +11,9 @@
   <div class="col-xs-12">
     <div class="list-group gap-3">
       <app-recipe-item
-        *ngFor="let recipeElement of recipes"
+        *ngFor="let recipeElement of recipes; let i = index"
         [recipe]="recipeElement"
+        [routerLink]="[i]"
       ></app-recipe-item>
     </div>
   </div>
