--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -2,13 +2,8 @@
   <div class="col-md-5">
     <app-recipe-list></app-recipe-list>
   </div>
+
   <div class="col-md-7">
-    <app-recipe-detail
-      [recipeDetails]="selectedRecipe"
-      *ngIf="selectedRecipe; else infoText"
-    ></app-recipe-detail>
-    <ng-template #infoText>
-      <p class="p-5">Please select a Recipe</p>
-    </ng-template>
+    <router-outlet></router-outlet>
   </div>
 </div>
