--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
   <div class="container-fluid">
-    <a class="navbar-brand fs-1" href="#">Recipe Book</a>
+    <a class="navbar-brand fs-1" routerLink="/recipes">Recipe Book</a>
     <button
       class="navbar-toggler"
       type="button"
